<resources>
    <string name="app_name">DemoLoginApplication</string>
    <!-- Strings related to login -->
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_number">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_cnf_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Sign Up</string>
    <string name="action_send_code">Send Code</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid email</string>
    <string name="invalid_number">Phone number invalid</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_with_social">Social Login</string>
    <string name="facebook_app_id">595996554575860</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="internet_error">"Please check your internet connection"</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="new_user">or New User?</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="user_registered_msg">User registered successfully. Please verify your email and login.</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="resend_code">Resend Code</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="verify">Verify</string>
    <string name="or">OR</string>
</resources>
